--- a/ND_01/stilius1.css
+++ b/ND_01/stilius1.css
@@ -13,20 +13,33 @@ h1{
     border-bottom-left-radius: 30px;
     border-top-left-radius: 30px;
     padding-right: 25px;
-    text-align: right;
-    font-size: 40px;
+    text-align: right;   
 }
-li a:link{
-    color: #0ff1db;
+a:link{
+    color: rgb(224, 19, 22);
+    background-color: rgb(32, 53, 242);
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 5px;
 }
-li a:visited{
-    color: #e01316;
+a:link:hover {
+    background-color: rgb(17, 32, 172);
+    box-shadow: 0 0 20px rgb(32, 53, 242);
 }
-li a:hover {
+
+a:visited{
+    color: rgb(224, 19, 22);
+    text-decoration: none;
+}
+a:hover {
     color: #ebf705;
+    text-decoration: none;
 }
-li a:active{
+a:active{
     color: #ff8c00;
+    text-decoration: none;
 }
 
 
@@ -43,11 +56,19 @@ li a:active{
 }
 
 .konteineris {
-    display:flexbox;
     width: 100%;
     font-size: 0;
     
 }
 h2 {
     text-align: center;
+}
+
+.konteineris-2 {
+    height: 40px;
+    display: flex;
+    align-items: left;
+    gap: 5px;
+    font-size: 15px;
+    font-weight: bold;
 }
