--- a/ND_01/stilius4.css
+++ b/ND_01/stilius4.css
@@ -1,10 +1,9 @@
 
 .konteineris {
-    background-image: url(Img/salos1.jpeg);
+    background-image: url(Img/276.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 .blokas h1{
     color: rgb(125, 43, 43);
-    filter: blur(2px);
 }
