--- a/Trafalgar/style.css
+++ b/Trafalgar/style.css
@@ -1,7 +1,8 @@
 body {
     background-color: #ffffff;
     height: 955.5vh;
-    width: 1600px;
+    width: 100%;
+    max-width: 1600px;
     margin: 0;
     font-family: "Mulish", sans-serif;
     border: 2px solid black;
@@ -9,8 +10,8 @@ body {
 
 .navbar{
     height: 100px;
-    margin-top: 10px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-content: center;
     align-items: center;
@@ -21,7 +22,9 @@ body {
     justify-content: center;
     align-content: center;
     align-items: center;
-    margin-left: 13rem;
+    padding-left: 13rem;
+    gap: 0.8rem;
+    
 }
 
 .logo {
@@ -40,17 +43,18 @@ body {
     color: #233348;
     font-size: 24px;
     font-weight: bold;
-    width: 30%;
 
 }
 
 .navbar ul{
-    width: 545px;
+    width: 100%;
+    max-width: 545px;
     height: 23px;
-    margin-right: 180px;
+    padding-right: 180px;
     display: flex;
+    align-content: center;
+    justify-content: center;
     list-style: none;
-    text-decoration: none;
     color: #1f1534;
     gap: 2rem;
 }
@@ -60,6 +64,7 @@ body {
     text-decoration: none;
     font-size: 18px;
     opacity: 0.5;
+    transition: 0;
 }
 
 .navbar li a:hover {
@@ -69,36 +74,34 @@ body {
 
 .container-header {
     height: auto;
-    padding: 20px;
+    gap: 6rem;
+    padding: 2rem;
     display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
+    flex-wrap: wrap;
+    justify-content:flex-start;
 }
 
 .trafalgar-header-image {
-    width: 693px;
+    width: 100%;
+    max-width: 693px;
     height: 598px;
-    margin-right: 150px;
     background:url(Img/e7c8a652b4ff26a094731214f377e182c2504450.png);
     background-repeat: no-repeat;
     background-color: #ffffff;
-    border: 1px solid crimson;
 }
 
 .header-text {
     font-family: "Mulish", sans-serif;
-    width: 445px;
+    width: 100%;
+    max-width: 445px;
     height: 338px;
-    margin-left: 14rem;
-    margin-top: 6rem;
+    padding-left: 11rem;
     justify-content: center;
     align-items: center;
 }
 
 .virtual {
     font-family: "Mulish", sans-serif;
-    width: 427px;
-    height: 112px;
     margin-top: 0;
     font-size: 48px;
     font-weight: 700;
@@ -108,8 +111,6 @@ body {
 .pheader {
     font-family: "Mulish", sans-serif;
     color: #7D7987;
-    width: 445px;
-    height: 96px;
     margin-bottom: 2.5rem;
     font-size: 21px;
     font-weight: 300;
@@ -131,3 +132,101 @@ body {
     border-radius: 55px;
     cursor: pointer;
 }
+
+.our-services {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.services-text {
+    justify-content:center;
+    align-content: center;
+    text-align: center;
+}
+
+.h-service {
+    color: rgba(0, 0, 0, 1);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 56px;
+}
+
+.rectangle-2 {
+    background-color: rgba(0, 0, 0, 1);
+    height: 2px;
+    width: 56px;
+    margin: 20px auto;
+    border-radius: 5px;
+}
+
+.p-service {
+    color: rgba(125, 121, 135, 1);
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 30px;
+    height: 60px;
+    margin-top: 2rem;
+}
+
+.services {
+    height: 967px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    gap:40px;
+    margin: 0 auto;
+}
+
+.blokas {
+    background: rgba(255, 255, 255, 1);
+    width: 30%;
+    min-width: 250px;
+    padding: 20px;
+    max-width: 350px;
+    height: 354px;
+    border-radius: 20px;
+    box-shadow: rgba(229, 233, 246, 0.4);
+    filter: blur();
+    border: 1px solid red;
+    text-align: left;
+    align-content: center;
+
+}
+
+.search-doctor, .online-pharmacy, .consultation, .details-info, .emergency-core, .tracking {
+    padding: 2.4rem;
+    margin-left: 0.8rem;
+}
+
+.services h2 {
+    color: rgba(0, 0, 0, 1);
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 56px;
+    letter-spacing: 0%;
+}
+
+.services p {
+    color: rgba(125, 121, 135, 1);
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.lupa, .buteliukas, .service-adres, .stat, .lagam, .list {
+    height: 90px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
