--- a/Trafalgar/style.css
+++ b/Trafalgar/style.css
@@ -405,7 +405,157 @@ body {
     background-color: #ffffff;
 }
 
+.container-testimonials {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    gap: 2rem;
+}
 
+.container-testimonials-block {
+    background: linear-gradient(to top right, rgba(90, 152, 242, 1), rgba(103, 195, 243, 1));
+    width: 100%;
+    max-width: 1120px;
+    height: 425px;
+    border-radius: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content:center;
+    justify-content: flex-start;
+    text-align: center;
+}
+
+
+.customer-head {
+    color: rgba(255, 255, 255, 1);
+    height: 48px;
+    margin-top: 70px;
+    font-size: 36px;
+    line-height: 48px;
+    letter-spacing: 0%;
+    align-self: center;
+}
+
+.container-testimonials-block .rectangle-3 {
+    background-color: rgba(255, 255, 255, 1);
+    align-self: center;
+}
+
+.testimonial-review {
+    width: 100%;
+    max-width: 900px;
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: center;
+    text-align: left;
+    gap: 2rem;
+}
+
+.founder-picture {
+    background: url(Img/Edward.png);
+    width: 100%;
+    max-width: 133px;
+    height: 133px;
+    margin: 0;
+    border-radius: 50%;
+    border: 5px solid white;
+}
+
+.founder-circle {
+    display: flex;
+    flex-direction: column;
+}
+
+.edward {
+    color: rgba(255, 255, 255, 1);
+    width: 100%;
+    max-width: 184px;
+    margin-bottom: 0;
+    margin-left: 0;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0;
+}
+
+.founder{
+    color: rgba(255, 255, 255, 0.85);
+    height: 48px;
+    margin:0;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 48px;
+    letter-spacing: 0;
+    position: relative;
+    bottom: 10px;
+}
+
+.review-text {
+    color: rgba(255, 255, 255, 0.9);
+    height: 120px;
+    text-align: left;
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: 0;
+    position: relative;
+    left: 75px;
+}
+
+.arrows {
+    width: 100%;
+    max-width: 336.43px;
+    height: 19.2px;
+    align-self: center;
+}
+
+.article-header {
+    margin-bottom: 0;
+}
+
+.container-article {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    height: 810px;
+    column-gap: 30px;
+}
+
+.container-article .rectangle-3 {
+    margin: 20px auto;
+}
+
+.container-gallery {
+    background: rgba(255, 255, 255, 1);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    gap: 2rem;
+}
+
+.article {
+    border-radius: 20px;
+    width: 100%;
+    max-width: 350px;
+    height:512px;
+    margin-top: 40px;
+    border: 1px solid red;
+}
+
+.container-article .learn-more {
+    margin-top: 69px;
+    align-self: center;
+} 
 
 
 
