--- a/Trafalgar/style.css
+++ b/Trafalgar/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgba(255, 255, 255, 1);
-    height: 955.5vh;
+    min-height: auto;
     width: 100%;
     max-width: 1600px;
     margin: 0;
@@ -515,10 +515,6 @@ body {
     align-self: center;
 }
 
-.article-header {
-    margin-bottom: 0;
-}
-
 .container-article {
     display: flex;
     flex-wrap: wrap;
@@ -527,7 +523,17 @@ body {
     align-content: center;
     text-align: center;
     height: 810px;
-    margin-top: 100px;
+    padding-top: 200px;
+}
+
+.article-header {
+    color: rgba(0, 0, 0, 1);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 56px;
+    letter-spacing: 0%;
+    margin-bottom: 0;
+    height: 56px;
 }
 
 .container-article .rectangle-3 {
@@ -599,7 +605,7 @@ body {
 
 
 footer {
-    background: linear-gradient(to top right, rgba(90, 152, 242, 1), rgba(103, 195, 243, 1));
+    background: linear-gradient(to top, rgba(90, 152, 242, 1), rgba(103, 195, 243, 1));
     color: rgba(255, 255, 255, 1);
     height: 432px;
     width: 100%;
@@ -607,6 +613,15 @@ footer {
     display: flex;
     flex-wrap: wrap;
     align-content: center;
+    justify-content:space-evenly;
+}
+
+.end-logo {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    gap: 10px;
+    padding-bottom: 5px;
 }
 
 footer .logo {
@@ -625,8 +640,70 @@ footer .trafalgar {
     color: rgba(255, 255, 255, 1);
     font-size: 24px;
     font-weight: bold;
-
+    line-height: auto;
+    padding-top: 5px;
 }
+
+.big-end {
+    font-size: 18px;
+    font-weight: lighter;
+    line-height: 28px;
+    letter-spacing: 0%;
+    padding-bottom: 15px;
+}
+
+.small-end {
+    font-size: 16px;
+    font-weight: lighter;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.container-end {
+    padding-left: 70px;
+}
+
+.end {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    text-align: left;
+    position: relative;
+    bottom: 20px;
+    row-gap: 5px;
+    column-gap: 20px;
+}
+
+.end h2{
+    margin-bottom: 0;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 60px;
+    letter-spacing: 0%;
+}
+
+.end ul {
+    margin-top: 0;
+    padding-left: 0;
+    font-size: 18px;
+    font-weight: lighter;
+    line-height: 38px;
+    letter-spacing: 0%;
+    list-style-type: none;   
+    list-style-position: outside;
+}
+
+.footer-ball {
+    width:  100%;
+    max-width: 132px;
+    height: 115px;
+    position: relative;
+    bottom: 160px;
+    left: 0;
+    z-index: -1;
+}
+
+
 
 
 
