--- a/Trafalgar/style.css
+++ b/Trafalgar/style.css
@@ -603,17 +603,37 @@ body {
     font-weight: 600;
 } 
 
-
 footer {
+    width: 100%;
+    height:100%;
+    padding: 0;
+    margin-top: 170px;
+    display: flex;
+    position: relative;
+}
+
+section {
     background: linear-gradient(to top, rgba(90, 152, 242, 1), rgba(103, 195, 243, 1));
     color: rgba(255, 255, 255, 1);
     height: 432px;
     width: 100%;
-    margin-top:250px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content:center;
+    justify-content: flex-start;
+    position: relative;
+    overflow: hidden;
+
+}
+
+.end-left {
+    width: 50%;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
-    justify-content:space-evenly;
+    flex-direction: column;
+    margin-bottom: 0;
+    margin-top: 25px;
 }
 
 .end-logo {
@@ -649,7 +669,8 @@ footer .trafalgar {
     font-weight: lighter;
     line-height: 28px;
     letter-spacing: 0%;
-    padding-bottom: 15px;
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 .small-end {
@@ -660,18 +681,19 @@ footer .trafalgar {
 }
 
 .container-end {
-    padding-left: 70px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    margin-bottom: 50px;
 }
 
 .end {
-    display: flex;
-    flex-direction: column;
-    align-content: flex-start;
+    width: 33%;
+    max-width: 200px;
     text-align: left;
-    position: relative;
-    bottom: 20px;
-    row-gap: 5px;
-    column-gap: 20px;
+    padding: 0;
+    margin-bottom: 60px;
+    
 }
 
 .end h2{
@@ -697,11 +719,24 @@ footer .trafalgar {
     width:  100%;
     max-width: 132px;
     height: 115px;
-    position: relative;
-    bottom: 160px;
-    left: 0;
+    position: absolute;
+    bottom: 385px;
+    right: 100px;
     z-index: -1;
 }
+
+.footer-ball2 {
+    width:  100%;
+    max-width: 132px;
+    height: 115px;
+    position: absolute;
+    top: 337px;
+    right: 1490px;
+    z-index: 1;
+}
+
+
+
 
 
 
