--- a/Trafalgar/style.css
+++ b/Trafalgar/style.css
@@ -79,6 +79,18 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content:flex-start;
+    position: relative;
+    overflow: hidden;
+}
+
+.footer-ball6 {
+    width:  100%;
+    max-width: 132px;
+    height: 115px;
+    position: absolute;
+    top: 35px;
+    right: 1520px;
+    z-index: -1;
 }
 
 .trafalgar-header-image {
@@ -96,8 +108,11 @@ body {
     max-width: 445px;
     height: 338px;
     padding-left: 11rem;
+    margin-bottom: 30px;
     justify-content: center;
     align-items: center;
+    align-self: center;
+
 }
 
 .virtual {
@@ -133,18 +148,41 @@ body {
     cursor: pointer;
 }
 
+.sekcija-1 {
+    position: relative;
+}
+
 .our-services {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     margin-top: 100px;
+    z-index: 999;
+}
+
+.vektorius-2 {
+    position: absolute;
+    top: 240px;
+    left: 0;
+    z-index: -999;
+}
+
+.footer-ball5 {
+    width:  100%;
+    max-width: 132px;
+    height: 115px;
+    position: absolute;
+    top: 571px;
+    right: 170px;
+    z-index: -1;
 }
 
 .services-text {
     justify-content:center;
     align-content: center;
     text-align: center;
+    z-index: 999;
 }
 
 .h-service {
@@ -179,10 +217,11 @@ body {
     margin: 0 auto;
     padding-left: 5.1rem;
     padding-right: 7rem;
+    z-index: 999;
 }
 
 .blokas {
-    background: transparent;
+    background:#ffffff;
     width: 30.3333%;
     min-width: 250px;
     max-width: 350px;
@@ -427,6 +466,17 @@ body {
     justify-content: center;
     align-content: center;
     gap: 2rem;
+    position: relative;
+}
+
+.footer-ball7 {
+    width:  100%;
+    max-width: 132px;
+    height: 115px;
+    position: absolute;
+    top: 270px;
+    left: 185px;
+    z-index: -1;
 }
 
 .container-testimonials-block {
@@ -539,6 +589,24 @@ body {
     text-align: center;
     height: 810px;
     padding-top: 200px;
+    position: relative;
+}
+
+.vektorius-1 {
+    position: absolute;
+    top: 320px;
+    right: 0;
+    z-index: -1;
+}
+
+.footer-ball4 {
+    width:  100%;
+    max-width: 132px;
+    height: 115px;
+    position: absolute;
+    top: 318px;
+    left: 192px;
+    z-index: -1;
 }
 
 .article-header {
@@ -556,13 +624,14 @@ body {
 }
 
 .container-gallery {
-    background: rgba(255, 255, 255, 1);
+    background: rgba(255, 255, 255, 0);
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     align-content: center;
     gap: 2rem;
+    margin-top: 20px;
 }
 
 .article {
@@ -571,7 +640,7 @@ body {
     width: 100%;
     max-width: 350px;
     height:512px;
-    margin-top: 40px;
+    margin-top: 0;
     box-shadow: 5px 20px 25px 10px rgba(229, 233, 246, 0.4);
 }
 
