--- a/Trafalgar/style.css
+++ b/Trafalgar/style.css
@@ -1,20 +1,28 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: rgba(255, 255, 255, 1);
-    min-height: auto;
     width: 100%;
     max-width: 1600px;
     margin: 0;
+    padding: 0;
     font-family: "Mulish", sans-serif;
     border: 2px solid black;
 }
 
 .navbar{
-    height: 100px;
+    height: 100%;
+    max-height: 100px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    gap: 12rem;
     align-content: center;
     align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .topleft {
@@ -22,8 +30,9 @@ body {
     justify-content: center;
     align-content: center;
     align-items: center;
-    padding-left: 13rem;
     gap: 0.8rem;
+    padding-inline-end: 4rem;
+
     
 }
 
@@ -46,17 +55,18 @@ body {
 
 }
 
+
 .navbar ul{
     width: 100%;
-    max-width: 545px;
+    max-width: 40rem;
     height: 23px;
-    padding-right: 180px;
     display: flex;
     align-content: center;
-    justify-content: center;
+    justify-content: flex-end;
     list-style: none;
     color: #1f1534;
-    gap: 2rem;
+    column-gap: 2rem;
+    padding-inline-end: 3rem;
 }
 
 .navbar li a{
@@ -65,6 +75,7 @@ body {
     font-size: 18px;
     opacity: 0.5;
 }
+
 
 .navbar li a:hover {
     color: black;
@@ -77,7 +88,8 @@ body {
     padding: 2rem;
     display: flex;
     flex-wrap: wrap;
-    justify-content:flex-start;
+    justify-content: center;
+    align-items: center;
     position: relative;
     overflow: hidden;
 }
@@ -88,31 +100,39 @@ body {
     height: 115px;
     position: absolute;
     top: 35px;
-    right: 1520px;
+    left: -50px;
     z-index: -1;
 }
 
 .trafalgar-header-image {
     width: 100%;
-    max-width: 693px;
-    height: 598px;
-    background:url(Img/e7c8a652b4ff26a094731214f377e182c2504450.png);
-    background-repeat: no-repeat;
+    max-width: clamp(300px, 50vw, 693px);
+    height: auto;
+    object-fit: cover;
     background-color: #ffffff;
 }
+
 
 .header-text {
     font-family: "Mulish", sans-serif;
     width: 100%;
     max-width: 445px;
-    height: 338px;
-    padding-left: 11rem;
-    margin-bottom: 30px;
-    justify-content: center;
-    align-items: center;
+    height: auto;
     align-self: center;
-
+    margin-bottom: 3rem;
 }
+
+@media (max-width: 700px) {
+    .container-header {
+      flex-direction: column;
+      text-align: center;
+    }
+  
+    .header-text {
+      padding-inline: 1rem;
+      margin-bottom: 2rem;
+    }
+  }
 
 .virtual {
     font-family: "Mulish", sans-serif;
@@ -152,6 +172,7 @@ body {
 }
 
 .our-services {
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -176,26 +197,35 @@ body {
     right: 170px;
     z-index: -1;
 }
+.sekcija-1{
+    width: 100%;
+    padding-inline: 1rem;
+}
 
 .services-text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     justify-content:center;
     align-content: center;
     text-align: center;
-    z-index: 999;
+    padding-inline: 1rem;
 }
+
 
 .h-service {
     color: rgba(0, 0, 0, 1);
     font-weight: 700;
     font-size: 36px;
     line-height: 56px;
+    margin-bottom: 10px;
 }
 
 .rectangle-2 {
     background-color: rgba(0, 0, 0, 1);
     height: 2px;
     width: 56px;
-    margin: 20px auto;
+    margin: 10px auto;
     border-radius: 5px;
 }
 
@@ -204,8 +234,13 @@ body {
     font-weight: 300;
     font-size: 18px;
     line-height: 30px;
-    height: 60px;
-    margin-top: 2rem;
+    margin-top: 10px;
+    margin-bottom: 2rem;
+    padding: 0.5rem;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    box-sizing: border-box;
 }
 
 .services {
@@ -214,12 +249,19 @@ body {
     justify-content:center;
     gap:40px;
     margin: 0 auto;
-    padding-left: 5.1rem;
-    padding-right: 7rem;
+    padding-inline: 1rem;
     z-index: 999;
 }
 
+@media (min-width: 768px) {
+    .services {
+        padding-inline: 5rem;
+    }
+}
+
 .blokas {
+    display: flex;
+    flex-wrap: wrap;
     background:#ffffff;
     width: 30.3333%;
     min-width: 250px;
@@ -230,6 +272,12 @@ body {
     box-shadow: 5px 20px 25px 10px rgba(229, 233, 246, 0.4);
     text-align: left;
     align-content: center;
+}
+
+@media (max-width: 1250px) {
+    .blokas {
+        height: 400px;
+    }
 }
 
 .search-doctor, .online-pharmacy, .consultation, .details-info, .emergency-core, .tracking {
@@ -244,7 +292,7 @@ body {
     color: rgba(0, 0, 0, 1);
     font-weight: 700;
     font-size: 24px;
-    line-height: 56px;
+    line-height: clamp(0, 36px, 56px);
     letter-spacing: 0%;
 }
 
@@ -289,7 +337,7 @@ body {
 }
 
 .container-provider {
-    height: 477px;
+    height: ;
     width: 100%;
     max-width: 1273px;
     gap: 8rem;
