--- a/Trafalgar/style.css
+++ b/Trafalgar/style.css
@@ -206,6 +206,17 @@ body {
     z-index: -1;
 }
 
+@media (max-width: 1090px) {
+    .footer-ball5 {
+        display: none;
+    }
+
+    .vektorius-2 {
+        display: none;
+    }
+
+}
+
 .services-text {
     width: 100%;
     display: flex;
@@ -432,10 +443,11 @@ body {
   }
 
 .download-sekcija {
-    height: 1100px;
+    height: 100%;
+    padding-top: 250px;
+    padding-bottom: 150px;
     width: 100%;
     display: flex;
-    box-sizing: border-box;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -446,14 +458,14 @@ body {
 .footer-ball3 {
     position: absolute;
     top: 0px;
-    left: 1515px;
+    right: -45px;
 }
 
 .container-dowload-app {
-    width: 100%;
-    max-width: 1365px;
-    padding-left: 90px;
+    width: 40%;
+    height: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 75px;
 }
@@ -462,16 +474,17 @@ body {
     font-family: "Mulish", sans-serif;
     width: 100%;
     max-width: 420px;
-    height: 375px;
+    height: 100%;
     margin-top: 33px;
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .mobile-app {
     font-family: "Mulish", sans-serif;
     margin-top: 0;
-    height: 112px;
+    padding-bottom: 15px;
+    height: 100%;
     font-size: 36px;
     font-weight: 700;
     line-height: 48px;
@@ -480,17 +493,15 @@ body {
 
 .app-text .rectangle-3 {
     border-radius: 6px;
-    position: relative;
-    bottom: 5px
 }
 
 .p-app {
     font-family: "Mulish", sans-serif;
     color: #7D7987;
-    height: 120px;
+    height: 100%;
     width:100%;
     max-width: 420px;
-    margin-top: 25px;
+    padding-top: 20px;
     font-size: 18px;
     font-weight: 300;
     line-height: 30px;
@@ -501,42 +512,71 @@ body {
     background: #ffffff;
     color: #458FF6;
     font-family: "Mulish", sans-serif;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
+    display: inline-flex;
+    align-items: center;
     justify-content: center;
+    gap: 0.5rem;
     font-size: 18px;
     font-weight: 500;
-    line-height: 60px;
-    letter-spacing: 0%;
     border: 2px solid #458FF6;
+    padding: 0.75rem 1.5rem;
     height: 100%;
-    max-height: 56px;
-    width: 100%;
-    max-width: 200px;
-    margin-top: 40px;
+    height: 56px;
+    width: 200px;
+    margin-top: 25px;
     border-radius: 55px;
     cursor: pointer;
+    white-space: nowrap;
+    line-height: 1;
 }
 
 .rodykle {
-    height: 15.43px;
-    width: 9.82px;
-    position: relative;
-    top: 23px;
-    left: 14px;
+    height: 15px;
+    width: auto;
+    position: static;
+    display: inline-block;
 }
 
 .trafalgar-app-image {
     width: 100%;
-    max-width: 665px;
-    height: 434px;
-    background:url(Img/trafalgar-illustration\ sec03\ 1.png);
-    background-repeat: no-repeat;
+    max-width: clamp(300px, 50vw, 665px);
+    height: auto;
+    margin-top: 2rem;
+    object-fit: cover;
     background-color: #ffffff;
 }
 
+@media (max-width: 1235px) {
+    .download-sekcija {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      align-content: center;
+    }
+
+    .app-text {
+      padding-inline: 1rem;
+      margin-bottom: 2rem;
+    }
+
+    .app-text .rectangle-3 {
+        margin: 10px auto;
+    }
+
+    .download {
+        align-self: center;
+        justify-self: center;
+    }
+
+    .container-dowload-app {
+        width: 100%;
+    }
+  }
+  
 .container-testimonials {
+    height: 100%;
+    padding-top: 200px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -556,11 +596,12 @@ body {
     z-index: -1;
 }
 
+
 .container-testimonials-block {
     background: linear-gradient(to top right, rgba(90, 152, 242, 1), rgba(103, 195, 243, 1));
     width: 100%;
     max-width: 1120px;
-    height: 425px;
+    height: 100%;
     border-radius: 24px;
     display: flex;
     flex-wrap: wrap;
@@ -601,6 +642,7 @@ body {
     width: 100%;
     max-width: 900px;
     margin-top: 50px;
+    padding-bottom: 4rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -651,14 +693,41 @@ body {
 
 .review-text {
     color: rgba(255, 255, 255, 0.9);
-    height: 120px;
+    height: 100%;
     text-align: left;
     font-size: 19px;
     font-weight: 400;
     line-height: 30px;
     letter-spacing: 0;
-    position: relative;
-    left: 75px;
+}
+
+@media (max-width: 1130px) {
+    .testimonial-review {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        height: auto;
+    }
+
+    .footer-ball7 {
+        display: none;
+    }
+    .footer-ball8 {
+        display: none;
+    }
+
+    .container-testimonials {
+        padding-top: clamp(30px, 60px, 100px);
+        padding-inline: clamp(20px, 30px, 50px);
+    }
+}
+
+@media (max-width: 585px) {
+    .container-testimonials-block .rectangle-3 {
+        margin: 10px auto;
+    }
 }
 
 .arrows {
@@ -675,8 +744,9 @@ body {
     justify-content: center;
     align-content: center;
     text-align: center;
-    height: 810px;
+    height: 100%;
     padding-top: 200px;
+    padding-bottom: 200px;
     position: relative;
 }
 
@@ -704,6 +774,7 @@ body {
     line-height: 56px;
     letter-spacing: 0%;
     margin-bottom: 0;
+    padding-bottom: 10px;
     height: 56px;
 }
 
@@ -727,16 +798,15 @@ body {
     border-radius: 20px;
     width: 100%;
     max-width: 350px;
-    height:512px;
+    height: 512px;
     margin-top: 0;
     box-shadow: 5px 20px 25px 10px rgba(229, 233, 246, 0.4);
 }
 
 .article div {
     width: 100%;
-    max-width: 266px;
     text-align: left;
-    padding-left: 2rem;
+    padding-inline: 2rem 3rem;
 
 }
 
