--- a/K2 Sąskaita/style.css
+++ b/K2 Sąskaita/style.css
@@ -1,8 +1,1 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-}
+*{box-sizing:border-box}body{margin:0;padding:0;line-height:1.5}h1,h2,h3,h4,h5,h6{margin:0}header{width:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;margin-bottom:20px}header .tuščias{width:100%;height:50px}header #title{font-size:18px}header #number{font-size:12px}header #date{font-weight:normal;font-size:12px}main{width:100%;display:flex;flex-direction:column}main .konteineris{display:flex;margin-inline:20px;padding:0}main #seller{width:50%;border:1px solid #050505;font-size:12px;padding-inline:5px;padding-top:10px}main #buyer{width:50%;border:1px solid #050505;font-size:12px;padding-inline:5px;padding-top:10px}main #pirma{width:100%;margin-top:20px}main table{width:100%;margin:20px;font-size:12px;border-bottom:1px solid #050505}main th{margin:0;padding:0}
