--- a/K2 Sąskaita/style.scss
+++ b/K2 Sąskaita/style.scss
@@ -1,18 +1,11 @@
 
-$xl: 1100px;
-$lg: 1200px;
-$md: 992px;
-$sm: 768px;
-$xs: 576px;
-$xxs: 480px;
-$xxxs: 320px;
 
 $gap: 20px;
 $gap-min: 10px;
 $gap-max: 40px;
 
 $black: #050505;
-$grey: #7f7d7d;
+$grey: #8a8787fb;
 
 
 * {
@@ -92,18 +85,33 @@ main {
 
     #pirma {
         width: 100%;
-        margin-top: 20px;
+        padding: 20px;
+        text-align: center;
     }
 
         table {
+            table-layout: auto;
             width: 100%;
-            margin: 20px;
             font-size: 12px;
-            border-bottom: 1px solid #050505;
+            border: 1px solid $black;
+            border-collapse: collapse;
         }
-            th {
-                margin: 0;
-                padding: 0;
+
+            thead {
+                background-color: $grey;
+            }
+                th {
+                    border: 1px solid $black;
+                }
+
+            td {
+                border: 1px solid $black;
             }
 
+    #antra {
+        width: 30%;
+        padding-right: 20px;
+        text-align: center;
+        align-self: flex-end;
+    }            
 }
