--- a/Mentorius/002 GRID'as/style.css
+++ b/Mentorius/002 GRID'as/style.css
@@ -217,3 +217,51 @@ footer {
     border-radius: 2px;
     animation: shockwave 500ms ease-in-out 500ms;
 }
+
+/* Kortele */
+
+.card {
+    position: relative;
+    /* perspektyva */
+    perspective: 500px;
+    background-color: transparent;
+}
+
+.side{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 500ms ease-in;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    backface-visibility: hidden;
+
+    /* border-radius: 20px; */
+}
+
+.front{
+    background-color: #444;
+    transform: rotateY(0deg);
+}
+
+.back{
+    background-color: royalblue;
+    transform: rotateY(-180deg);
+    background-image: url(Img/cat\ 1.png);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: contain;
+}
+
+.card:hover .front{
+    transform: rotateY(-180deg);
+}
+
+.card:hover .back{
+    transform: rotateY(-360deg);
+}
