--- a/Trafalgar/style.css
+++ b/Trafalgar/style.css
@@ -200,7 +200,7 @@ body {
     max-width: 132px;
     height: 115px;
     position: absolute;
-    top: 580px;
+    top: 577px;
     right: 155px;
     z-index: -1;
 }
@@ -299,7 +299,8 @@ body {
 }
 
 .tracking {
-    padding-bottom: 3rem;
+    padding-bottom: 3.8rem;
+    margin-bottom: 0.2rem;
 }
 
 .services h3 {
@@ -590,7 +591,7 @@ body {
     max-width: 132px;
     height: 115px;
     position: absolute;
-    top: 270px;
+    bottom: 80px;
     left: 185px;
     z-index: -1;
 }
@@ -617,8 +618,8 @@ body {
     max-width: 132px;
     height: 115px;
     position: absolute;
-    top: 0px;
-    left: 1035px;
+    top: -20px;
+    right: -50px;
     
 }
 
@@ -761,7 +762,7 @@ body {
     max-width: 132px;
     height: 115px;
     position: absolute;
-    top: 318px;
+    top: 305px;
     left: 192px;
     z-index: -1;
 }
