--- a/ALL/project/src/style.scss
+++ b/ALL/project/src/style.scss
@@ -1,7 +1,9 @@
+@import "~bootstrap/scss/bootstrap";
+ 
 h1 {
-    color: crimson;
+    font-size: 26px;
 }
 
-.test-frame {
+.frame {
     position: relative;
   }
