--- a/Mentorius/003 laikrodis/style.css
+++ b/Mentorius/003 laikrodis/style.css
@@ -42,6 +42,7 @@ body {
     position: relative;
     box-shadow: inset 0 0 3px 1px #333;
     border: 3px solid white;
+    overflow: hidden;
 }
 div[class^="h-"] {
     position: absolute;
@@ -131,3 +132,31 @@ div[class^="h-"] {
     color: limegreen;
 }
 
+/* POMODORO Background */
+
+.pomodoro-bg {
+    width: 97px;
+    height: 97px;
+    position: relative;
+    transform: rotate(90deg);
+    transform-origin: bottom right;
+    display: none;
+}
+.pomodoro-bg > div {
+    width: 97px;
+    height: 97px;
+    background-color: rgb(239, 147, 136);
+    position: absolute;
+}
+
+.bg1 {
+}
+
+div.bg2 {
+    transform: rotate(60deg);
+    transform-origin: bottom right;
+}
+
+.show {
+    display: block;
+}
