--- a/ALL/project/src/style.scss
+++ b/ALL/project/src/style.scss
@@ -1,8 +1,4 @@
 @import "~bootstrap/scss/bootstrap";
- 
-h1 {
-    font-size: 26px;
-}
 
 
 body {
@@ -11,30 +7,33 @@ body {
 
 .frame {
     position: relative;
-  }
+}
 
-  .item {
+.item {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     .data {
         display: flex;
-        gap: 20px;
+        gap: 30px;
         flex-direction: row-reverse;
         align-items: center;
+
         .title {
             font-size: 20px;
             font-weight: bold;
         }
     }
-  }
+}
 
-  .confirm {
+.confirm {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+
     .info-table {
         padding: 40px;
         border: 2px solid crimson;
@@ -45,10 +44,11 @@ body {
 
 .view {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+
     .show-table {
         display: flex;
         flex-direction: column;
