--- a/K3 CRUD/public/style.css
+++ b/K3 CRUD/public/style.css
@@ -12087,3 +12087,18 @@ main #antra {
   font-size: 16px;
   font-weight: bold;
 }
+
+.confirm {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(202, 209, 202);
+}
+.confirm .info-table {
+  padding: 40px;
+  border: 2px solid crimson;
+  border-radius: 20px;
+  background-color: rgb(233, 179, 188);
+}
