--- a/ALL/db/public/style.css
+++ b/ALL/db/public/style.css
@@ -54,6 +54,18 @@ section.view ul li .tree-type {
 section.view ul li .tree-height {
   color: #ffc107;
 }
+section.view button {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+section.view button:hover {
+  background-color: #0056b3;
+}
 
 section.plant {
   display: flex;
