--- a/ALL/db/src/style.scss
+++ b/ALL/db/src/style.scss
@@ -54,6 +54,21 @@ section.view {
             }
         }
     }
+
+    button {
+        margin-top: 10px;
+        padding: 10px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+ 
+        &:hover {
+            background-color: #0056b3;
+        }
+    }
+
 }
 
 section.plant {
